src/app/major-arcana/page.module.css
.compConLink {
    text-align: center;
    border-radius: 20px;
    background-color: rgb(var(--callout-border-rgb));
    padding: 20px;
    margin: 20px;
    box-shadow: 4px 4px 4px black; 
}

.compConLink:hover {
    filter: brightness(1.25);
}

.title {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 80%;
    padding: 10px;
    border-bottom: 2px solid rgba(var(--callout-border-rgb), 0.3);
}

.title h1 {
    font-size: 5rem;
    padding: 5px;
}

.title h3 {
    font-style: italic;
    font-size: 0.85rem;
    font-weight: lighter;
    padding: 5px;
}

.maListContainer {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    margin-top: 20px;
}

.maListItem {
    width: 100%;
    background-color: rgba(var(--panel-text-rgb), 0.5);
    clip-path: polygon(100% 0,100% calc(100% - 15px),calc(100% - 15px) 100%,0 100%,0 0);
    background-repeat: no-repeat;
    background-position: right 10% top 0%;
    border-top: 5px solid rgba(var(--callout-border-rgb), 0.8);
}

.maListItem h2 {
    z-index: 3;
    text-align: left;
    font-size: 4rem;
    font-weight: bolder;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 10px;
}

.maListItem:hover h2 {
    color: rgb(var(--callout-border-rgb));
}

.title h2 {
    text-align: center;
    font-style: italic;
    font-size: 1rem;
    font-weight: lighter;
    padding: 5px;
}

.frameTitle {
    z-index: 2;
    position: relative;
    height: fit-content;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 5px;
}

.frameTitle h1 {
    z-index: 3;
    position: relative;
    width: 60vw;
    text-align: center;
    text-shadow: 5px 0px var(--text-shadow-hex);
    font-size: 9vw;
    padding: 5px;
    border-bottom: 5px solid rgba(var(--callout-border-rgb), 0.8);
}

.cardImage {
    z-index: -999;
    position: absolute;
    top: 50vh;
    right: 0;
    bottom: 0vh;
    left: 30vw;
    opacity: 0.5;
    transform: translateZ(-7px) scale(5);
}

.pilotBlock {
    width: 80%;
    position: relative;
}

.quoteHeader {
    position: relative;
    padding-bottom: 20px;
    padding-top: 20px;
}

.quoteHeader h2 {
    position: relative;
    text-align: left;
    font-style: italic;
    font-size: 1rem;
    padding-bottom: 0px;
    padding-top: 0px;
    opacity: 0.8;
}

.pilotBlock h1 {
    z-index: 3;
    text-align: left;
    font-size: 4rem;
    font-weight: bolder;
    padding-top: 50px;
}

.pilotBlock h3 {
    z-index: 3;
    color: rgb(var(--callout-border-rgb));
    text-align: left;
    font-size: 2rem;
    font-weight: bolder;
}

.panel {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-bottom: 40px;
    clip-path: polygon(100% 0,100% calc(100% - 15px),calc(100% - 15px) 100%,0 100%,0 0);
}

.panel h2 {
    width: 100%;
    padding: 10px;
    font-size: 2rem;
    background-color: rgb(var(--panel-rgb));
}

.panelText {
    width: 100%;
    height: 100%;
    background-color: rgba(var(--panel-text-rgb), 0.5);
    padding: 10px;
}

.panelText p {
    font-size: 1.1rem;
    font-family: var(--font-mono);
    padding-top: 5px;
    padding-bottom: 5px;
}

.licensesContainer {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    gap: 20px;
    padding-bottom: 20px;
}

.license {
    border-radius: 20px;
    padding: 15px;
    border: 5px solid rgb(var(--callout-border-rgb));
}

.license h3 {
    color: white;
}

.pilotAttributes {
    display: flex;
    flex-direction: row;
    gap: 20px;
}

.pilotGear {
    position: relative;
    padding-top: 20px;
    padding-bottom: 20px;
}

.pilotGear h2 {
    text-align: left;
    font-size: 2rem;
}

.pilotEquipment {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 15px;
    padding-top: 10px;
}

.pilotItems {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 15px;
    padding-top: 10px;
}

.equipmentItem {
    width: 100%;
    position: relative;
    background-color: rgba(var(--panel-text-rgb), 0.5);
    border-top: 5px solid rgba(var(--callout-border-rgb), 0.8);
    clip-path: polygon(100% 0,100% calc(100% - 15px),calc(100% - 15px) 100%,0 100%,0 0);
}

.equipmentItem p {
    font-size: 1.1rem;
    font-family: var(--font-mono);
    margin-left: 10px;
    padding-top: 5px;
    padding-bottom: 5px;
}

.coreBonusContainer {
    position: relative;
}

.coreBonusContainer h2 {
    z-index: 3;
    text-align: left;
    text-shadow: 5px 0px var(--text-shadow-hex);
    font-size: 2rem;
    padding: 5px;
    border-bottom: 5px solid rgba(var(--callout-border-rgb), 0.8);
}

.coreBonus {
    width: 100%;
}

.coreBonus h3 {
    z-index: 3;
    padding-top: 5px;
    padding-bottom: 5px;
    color: rgb(var(--callout-border-rgb));
    text-align: left;
    font-size: 2rem;
    font-weight: bolder;
}

.mechBlock {
    position: relative;
    display: flex;
    width: 80%;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding-top: 40px;
    border-top: 5px solid rgba(var(--callout-border-rgb), 0.8);
}

.mechTitle {
    position: relative;
    width: 100%;
    border-bottom: 5px solid white;
}

.mechTitle h1 {
    font-size: 5rem;
    text-align: left;
}

.mechTitle h2 {
    font-size: 1.5rem;
}

.haseBlock {
    width: 80%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding-top: 10px;
    gap: 20px;
}

.mechStats {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 20px;
}

.mechStatsRow {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 20px;
}

.mechStatBlock {
    height: fit-content;
    width: 15vw;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    margin-bottom: 20px;
    clip-path: polygon(100% 0,100% calc(100% - 15px),calc(100% - 15px) 100%,0 100%,0 0);
}

.mechStatBlock h3 {
    width: 100%;
    text-align: center;
    font-size: 1.5vw;
    background-color: rgba(var(--panel-rgb), 1.0);
    padding: 10px;
}

.mechStatBlockText {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: rgba(var(--panel-rgb), 0.5);
}

.mechStatBlockText p {
    height: fit-content;
    font-family: var(--font-mono);
    font-weight: bolder;
    font-size: 2.5rem;
    padding: 10px;
}

.frameImageContainer {
    height: 900px;
    width: 900px;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    opacity: 100%;
}

.frameImage {
    z-index: -1;
    position: absolute;
    object-fit: scale-down;
    overflow-x: visible;
    opacity: 100%;
}

.coreSystem {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    border-radius: 30px;
    padding: 20px;
    border: 5px solid rgb(var(--callout-border-rgb));
}

.coreSystem h3 {
    font-size: 4rem;
    color: white;
    text-shadow: 5px 0px var(--text-shadow-hex);
    text-align: center;
}

.mechWeapons {
    width: 100%;
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 15px;
    align-items: flex-start;
}

.mechWeaponBlock {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    padding: 20px;
    background-color: rgba(var(--panel-text-rgb), 0.5);
    border-top: 5px solid rgba(var(--callout-border-rgb), 0.8);
    clip-path: polygon(100% 0,100% calc(100% - 15px),calc(100% - 15px) 100%,0 100%,0 0);
    margin-bottom: 20px;
}

.mechWeaponBlock h3 {
    color: rgb(var(--callout-border-rgb));
}

.mechSystems {
    width: 100%;
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 15px;
    align-items: flex-start;
}

.mechSystemBlock {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    padding: 20px;
    background-color: rgba(var(--callout-border-rgb), 0.5);
    border-top: 5px solid rgba(var(--callout-border-rgb), 0.8);
    clip-path: polygon(100% 0,100% calc(100% - 15px),calc(100% - 15px) 100%,0 100%,0 0);
    margin-bottom: 20px;
}

.mechSystemBlock h3 {
    color: rgb(var(--callout-border-rgb));
}

.main {
    perspective: 1px;
    height: 100vh;
    overflow-x: hidden;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding: 6rem;
}

.maContainer {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* Enable hover only on non-touch devices */
@media (hover: hover) and (pointer: fine) { }

/* Mobile */
@media (max-width: 700px) { 
    .main {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        align-items: center;
        padding: 3rem;
        min-height: 100vh;
    }
}

/* Tablet and Smaller Desktop */
@media (min-width: 701px) and (max-width: 1120px) { }

/* Dark mode */
@media (prefers-color-scheme: dark) { }

